# EffectiveModernC-

./: CMakeLists.txt  base14.cpp  base15.cpp  base7.cpp  base8.cpp  gadent.h  item1.cpp  item10.cpp  item11.cpp  item12.cpp  item13.cpp  item14.cpp  item15.cpp  item16.cpp  item17.cpp  item18.cpp  item19.cpp  item2.cpp  item20.cpp  item22.cpp  item23.cpp  item24.cpp  item25.cpp  item26.cpp  item27.cpp  item28.cpp  item30.cpp  item31.cpp  item32.cpp  item33.cpp  item34.cpp  item41.cpp  item42.cpp  item5.cpp  item6.cpp  item7.cpp  item8.cpp  item9.cpp  widget.cpp  widget.h
concurrency/: CMakeLists.txt  ProducerAndComsumer1.cpp  ProducerAndComsumer2.cpp  ProducerAndComsumer3.cpp  ProducerAndComsumer4.cpp  chapter3.cpp  chapter4_1.cpp  chapter4_2.cpp  chapter5_1.cpp  chapter6_1.cpp  chapter6_2.cpp  chapter6_3.cpp  chapter7_1.cpp  chapter7_2.cpp  chapter7_3.cpp
effectiveCpp/: CMakeLists.txt  chapter1.cpp  chapter2.cpp  chapter3.cpp  chapter4.cpp  chapter5.cpp  chapter6.cpp  chapter7.cpp  chapter8.cpp  chapter9.cpp
