cmake_minimum_required(VERSION 3.0.0)
project(Hello)

# set(CMAKE_CXX_STANDARD 11)

add_executable(item1 item1.cpp)
add_executable(item2 item2.cpp)
add_executable(item5 item5.cpp)
add_executable(item6 item6.cpp)
add_executable(item7 item7.cpp)
add_executable(item8 item8.cpp)
add_executable(item9 item9.cpp)
add_executable(item10 item10.cpp)
add_executable(item11 item11.cpp)
add_executable(item12 item12.cpp)
add_executable(item13 item13.cpp)
add_executable(item14 item14.cpp)
add_executable(item15 item15.cpp)
add_executable(item16 item16.cpp)
add_executable(item17 item17.cpp)
add_executable(base7 base7.cpp)
add_executable(base8 base8.cpp)
add_executable(base14 base14.cpp) 
add_executable(base15 base15.cpp)
add_executable(item18 item18.cpp)
add_executable(item19 item19.cpp)
add_executable(item20 item20.cpp)
add_executable(item22 item22.cpp widget.cpp)
add_executable(item23 item23.cpp)
add_executable(item24 item24.cpp)
add_executable(item25 item25.cpp)
add_executable(item26 item26.cpp)