cmake_minimum_required(VERSION 3.0.0)
project(effectiveCpp)

add_executable(effectiveCppChapter1 chapter1.cpp)
add_executable(effectiveCppChapter2 chapter2.cpp)
add_executable(effectiveCppChapter3 chapter3.cpp)
add_executable(effectiveCppChapter4 chapter4.cpp)
add_executable(effectiveCppChapter5 chapter5.cpp)